confirm JRMP query