@@ -6,12 +6,18 @@ repositories {
     mavenCentral()
 }
 
-compileJava.options.encoding = "UTF-8"
+compileJava {
+    options.encoding = 'UTF-8'
+    options.compilerArgs.addAll([
+            '--add-exports=java.rmi/sun.rmi.server=ALL-UNNAMED',
+            '--add-exports=java.rmi/sun.rmi.transport=ALL-UNNAMED',
+            '--add-exports=java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED'
+    ])
+}
 
 dependencies {
     implementation 'net.portswigger.burp.extender:burp-extender-api:2.2'
-    implementation files('libs/weblogic.jar')
-    implementation files('libs/wlthint3client.jar')
+    implementation files('libs/weblogic.jar', 'libs/wlthint3client.jar')
 }
 
 task fatJar(type: Jar) {
